Improved loader resource types